Code/syntax.output
Grammar

    0 $accept: Program $end

    1 Program: ExtDefList

    2 ExtDefList: ε
    3           | ExtDef ExtDefList

    4 ExtDef: Specifier ExtDecList SEMI
    5       | Specifier SEMI
    6       | Specifier FunDec CompSt

    7 ExtDecList: VarDec
    8           | VarDec COMMA ExtDecList

    9 Specifier: TYPE
   10          | StructSpecifier

   11 StructSpecifier: STRUCT OptTag LC DefList RC
   12                | STRUCT Tag

   13 OptTag: ID
   14       | ε

   15 Tag: ID

   16 VarDec: ID
   17       | VarDec LB INT RB

   18 FunDec: ID LP VarList RP
   19       | ID LP RP

   20 VarList: ParamDec COMMA VarList
   21        | ParamDec

   22 ParamDec: Specifier VarDec

   23 CompSt: LC DefList StmtList RC

   24 StmtList: Stmt StmtList
   25         | ε

   26 Stmt: Exp SEMI
   27     | CompSt
   28     | RETURN Exp SEMI
   29     | IF LP Exp RP Stmt
   30     | IF LP Exp RP Stmt ELSE Stmt
   31     | WHILE LP Exp RP Stmt

   32 DefList: Def DefList
   33        | ε

   34 Def: Specifier DecList SEMI

   35 DecList: Dec
   36        | Dec COMMA DecList

   37 Dec: VarDec
   38    | VarDec ASSIGNOP Exp

   39 Exp: Exp ASSIGNOP Exp
   40    | Exp AND Exp
   41    | Exp OR Exp
   42    | Exp RELOP Exp
   43    | Exp PLUS Exp
   44    | Exp MINUS Exp
   45    | Exp STAR Exp
   46    | Exp DIV Exp
   47    | LP Exp RP
   48    | MINUS Exp
   49    | NOT Exp
   50    | ID LP Args RP
   51    | ID LP RP
   52    | Exp LB Exp RB
   53    | Exp DOT ID
   54    | ID
   55    | INT
   56    | FLOAT

   57 Args: Exp COMMA Args
   58     | Exp


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    INT <type_int> (258) 17 55
    FLOAT <type_float> (259) 56
    ID <type_id> (260) 13 15 16 18 19 50 51 53 54
    COMMA (261) 8 20 36 57
    SEMI (262) 4 5 26 28 34
    LOWER_THAN_ELSE (263)
    RETURN (264) 28
    IF (265) 29 30
    ELSE (266) 30
    WHILE (267) 31
    STRUCT (268) 11 12
    TYPE <type_type> (269) 9
    ASSIGNOP (270) 38 39
    OR (271) 41
    AND (272) 40
    RELOP (273) 42
    PLUS (274) 43
    MINUS (275) 44 48
    STAR (276) 45
    DIV (277) 46
    NOT (278) 49
    LB (279) 17 52
    RB (280) 17 52
    LP (281) 18 19 29 30 31 47 50 51
    RP (282) 18 19 29 30 31 47 50 51
    LC (283) 11 23
    RC (284) 11 23
    DOT (285) 53


Nonterminals, with rules where they appear

    $accept (31)
        on left: 0
    Program <type_astnode> (32)
        on left: 1
        on right: 0
    ExtDefList <type_astnode> (33)
        on left: 2 3
        on right: 1 3
    ExtDef <type_astnode> (34)
        on left: 4 5 6
        on right: 3
    ExtDecList <type_astnode> (35)
        on left: 7 8
        on right: 4 8
    Specifier <type_astnode> (36)
        on left: 9 10
        on right: 4 5 6 22 34
    StructSpecifier <type_astnode> (37)
        on left: 11 12
        on right: 10
    OptTag <type_astnode> (38)
        on left: 13 14
        on right: 11
    Tag <type_astnode> (39)
        on left: 15
        on right: 12
    VarDec <type_astnode> (40)
        on left: 16 17
        on right: 7 8 17 22 37 38
    FunDec <type_astnode> (41)
        on left: 18 19
        on right: 6
    VarList <type_astnode> (42)
        on left: 20 21
        on right: 18 20
    ParamDec <type_astnode> (43)
        on left: 22
        on right: 20 21
    CompSt <type_astnode> (44)
        on left: 23
        on right: 6 27
    StmtList <type_astnode> (45)
        on left: 24 25
        on right: 23 24
    Stmt <type_astnode> (46)
        on left: 26 27 28 29 30 31
        on right: 24 29 30 31
    DefList <type_astnode> (47)
        on left: 32 33
        on right: 11 23 32
    Def <type_astnode> (48)
        on left: 34
        on right: 32
    DecList <type_astnode> (49)
        on left: 35 36
        on right: 34 36
    Dec <type_astnode> (50)
        on left: 37 38
        on right: 35 36
    Exp <type_astnode> (51)
        on left: 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56
        on right: 26 28 29 30 31 38 39 40 41 42 43 44 45 46 47 48 49 52 53 57 58
    Args <type_astnode> (52)
        on left: 57 58
        on right: 50 57


State 0

    0 $accept: • Program $end

    STRUCT  shift, and go to state 1
    TYPE    shift, and go to state 2

    $default  reduce using rule 2 (ExtDefList)

    Program          go to state 3
    ExtDefList       go to state 4
    ExtDef           go to state 5
    Specifier        go to state 6
    StructSpecifier  go to state 7


State 1

   11 StructSpecifier: STRUCT • OptTag LC DefList RC
   12                | STRUCT • Tag

    ID  shift, and go to state 8

    $default  reduce using rule 14 (OptTag)

    OptTag  go to state 9
    Tag     go to state 10


State 2

    9 Specifier: TYPE •

    $default  reduce using rule 9 (Specifier)


State 3

    0 $accept: Program • $end

    $end  shift, and go to state 11


State 4

    1 Program: ExtDefList •

    $default  reduce using rule 1 (Program)


State 5

    3 ExtDefList: ExtDef • ExtDefList

    STRUCT  shift, and go to state 1
    TYPE    shift, and go to state 2

    $default  reduce using rule 2 (ExtDefList)

    ExtDefList       go to state 12
    ExtDef           go to state 5
    Specifier        go to state 6
    StructSpecifier  go to state 7


State 6

    4 ExtDef: Specifier • ExtDecList SEMI
    5       | Specifier • SEMI
    6       | Specifier • FunDec CompSt

    ID    shift, and go to state 13
    SEMI  shift, and go to state 14

    ExtDecList  go to state 15
    VarDec      go to state 16
    FunDec      go to state 17


State 7

   10 Specifier: StructSpecifier •

    $default  reduce using rule 10 (Specifier)


State 8

   13 OptTag: ID •
   15 Tag: ID •

    LC        reduce using rule 13 (OptTag)
    $default  reduce using rule 15 (Tag)


State 9

   11 StructSpecifier: STRUCT OptTag • LC DefList RC

    LC  shift, and go to state 18


State 10

   12 StructSpecifier: STRUCT Tag •

    $default  reduce using rule 12 (StructSpecifier)


State 11

    0 $accept: Program $end •

    $default  accept


State 12

    3 ExtDefList: ExtDef ExtDefList •

    $default  reduce using rule 3 (ExtDefList)


State 13

   16 VarDec: ID •
   18 FunDec: ID • LP VarList RP
   19       | ID • LP RP

    LP  shift, and go to state 19

    $default  reduce using rule 16 (VarDec)


State 14

    5 ExtDef: Specifier SEMI •

    $default  reduce using rule 5 (ExtDef)


State 15

    4 ExtDef: Specifier ExtDecList • SEMI

    SEMI  shift, and go to state 20


State 16

    7 ExtDecList: VarDec •
    8           | VarDec • COMMA ExtDecList
   17 VarDec: VarDec • LB INT RB

    COMMA  shift, and go to state 21
    LB     shift, and go to state 22

    $default  reduce using rule 7 (ExtDecList)


State 17

    6 ExtDef: Specifier FunDec • CompSt

    LC  shift, and go to state 23

    CompSt  go to state 24


State 18

   11 StructSpecifier: STRUCT OptTag LC • DefList RC

    STRUCT  shift, and go to state 1
    TYPE    shift, and go to state 2

    $default  reduce using rule 33 (DefList)

    Specifier        go to state 25
    StructSpecifier  go to state 7
    DefList          go to state 26
    Def              go to state 27


State 19

   18 FunDec: ID LP • VarList RP
   19       | ID LP • RP

    STRUCT  shift, and go to state 1
    TYPE    shift, and go to state 2
    RP      shift, and go to state 28

    Specifier        go to state 29
    StructSpecifier  go to state 7
    VarList          go to state 30
    ParamDec         go to state 31


State 20

    4 ExtDef: Specifier ExtDecList SEMI •

    $default  reduce using rule 4 (ExtDef)


State 21

    8 ExtDecList: VarDec COMMA • ExtDecList

    ID  shift, and go to state 32

    ExtDecList  go to state 33
    VarDec      go to state 16


State 22

   17 VarDec: VarDec LB • INT RB

    INT  shift, and go to state 34


State 23

   23 CompSt: LC • DefList StmtList RC

    STRUCT  shift, and go to state 1
    TYPE    shift, and go to state 2

    $default  reduce using rule 33 (DefList)

    Specifier        go to state 25
    StructSpecifier  go to state 7
    DefList          go to state 35
    Def              go to state 27


State 24

    6 ExtDef: Specifier FunDec CompSt •

    $default  reduce using rule 6 (ExtDef)


State 25

   34 Def: Specifier • DecList SEMI

    ID  shift, and go to state 32

    VarDec   go to state 36
    DecList  go to state 37
    Dec      go to state 38


State 26

   11 StructSpecifier: STRUCT OptTag LC DefList • RC

    RC  shift, and go to state 39


State 27

   32 DefList: Def • DefList

    STRUCT  shift, and go to state 1
    TYPE    shift, and go to state 2

    $default  reduce using rule 33 (DefList)

    Specifier        go to state 25
    StructSpecifier  go to state 7
    DefList          go to state 40
    Def              go to state 27


State 28

   19 FunDec: ID LP RP •

    $default  reduce using rule 19 (FunDec)


State 29

   22 ParamDec: Specifier • VarDec

    ID  shift, and go to state 32

    VarDec  go to state 41


State 30

   18 FunDec: ID LP VarList • RP

    RP  shift, and go to state 42


State 31

   20 VarList: ParamDec • COMMA VarList
   21        | ParamDec •

    COMMA  shift, and go to state 43

    $default  reduce using rule 21 (VarList)


State 32

   16 VarDec: ID •

    $default  reduce using rule 16 (VarDec)


State 33

    8 ExtDecList: VarDec COMMA ExtDecList •

    $default  reduce using rule 8 (ExtDecList)


State 34

   17 VarDec: VarDec LB INT • RB

    RB  shift, and go to state 44


State 35

   23 CompSt: LC DefList • StmtList RC

    INT     shift, and go to state 45
    FLOAT   shift, and go to state 46
    ID      shift, and go to state 47
    RETURN  shift, and go to state 48
    IF      shift, and go to state 49
    WHILE   shift, and go to state 50
    MINUS   shift, and go to state 51
    NOT     shift, and go to state 52
    LP      shift, and go to state 53
    LC      shift, and go to state 23

    $default  reduce using rule 25 (StmtList)

    CompSt    go to state 54
    StmtList  go to state 55
    Stmt      go to state 56
    Exp       go to state 57


State 36

   17 VarDec: VarDec • LB INT RB
   37 Dec: VarDec •
   38    | VarDec • ASSIGNOP Exp

    ASSIGNOP  shift, and go to state 58
    LB        shift, and go to state 22

    $default  reduce using rule 37 (Dec)


State 37

   34 Def: Specifier DecList • SEMI

    SEMI  shift, and go to state 59


State 38

   35 DecList: Dec •
   36        | Dec • COMMA DecList

    COMMA  shift, and go to state 60

    $default  reduce using rule 35 (DecList)


State 39

   11 StructSpecifier: STRUCT OptTag LC DefList RC •

    $default  reduce using rule 11 (StructSpecifier)


State 40

   32 DefList: Def DefList •

    $default  reduce using rule 32 (DefList)


State 41

   17 VarDec: VarDec • LB INT RB
   22 ParamDec: Specifier VarDec •

    LB  shift, and go to state 22

    $default  reduce using rule 22 (ParamDec)


State 42

   18 FunDec: ID LP VarList RP •

    $default  reduce using rule 18 (FunDec)


State 43

   20 VarList: ParamDec COMMA • VarList

    STRUCT  shift, and go to state 1
    TYPE    shift, and go to state 2

    Specifier        go to state 29
    StructSpecifier  go to state 7
    VarList          go to state 61
    ParamDec         go to state 31


State 44

   17 VarDec: VarDec LB INT RB •

    $default  reduce using rule 17 (VarDec)


State 45

   55 Exp: INT •

    $default  reduce using rule 55 (Exp)


State 46

   56 Exp: FLOAT •

    $default  reduce using rule 56 (Exp)


State 47

   50 Exp: ID • LP Args RP
   51    | ID • LP RP
   54    | ID •

    LP  shift, and go to state 62

    $default  reduce using rule 54 (Exp)


State 48

   28 Stmt: RETURN • Exp SEMI

    INT    shift, and go to state 45
    FLOAT  shift, and go to state 46
    ID     shift, and go to state 47
    MINUS  shift, and go to state 51
    NOT    shift, and go to state 52
    LP     shift, and go to state 53

    Exp  go to state 63


State 49

   29 Stmt: IF • LP Exp RP Stmt
   30     | IF • LP Exp RP Stmt ELSE Stmt

    LP  shift, and go to state 64


State 50

   31 Stmt: WHILE • LP Exp RP Stmt

    LP  shift, and go to state 65


State 51

   48 Exp: MINUS • Exp

    INT    shift, and go to state 45
    FLOAT  shift, and go to state 46
    ID     shift, and go to state 47
    MINUS  shift, and go to state 51
    NOT    shift, and go to state 52
    LP     shift, and go to state 53

    Exp  go to state 66


State 52

   49 Exp: NOT • Exp

    INT    shift, and go to state 45
    FLOAT  shift, and go to state 46
    ID     shift, and go to state 47
    MINUS  shift, and go to state 51
    NOT    shift, and go to state 52
    LP     shift, and go to state 53

    Exp  go to state 67


State 53

   47 Exp: LP • Exp RP

    INT    shift, and go to state 45
    FLOAT  shift, and go to state 46
    ID     shift, and go to state 47
    MINUS  shift, and go to state 51
    NOT    shift, and go to state 52
    LP     shift, and go to state 53

    Exp  go to state 68


State 54

   27 Stmt: CompSt •

    $default  reduce using rule 27 (Stmt)


State 55

   23 CompSt: LC DefList StmtList • RC

    RC  shift, and go to state 69


State 56

   24 StmtList: Stmt • StmtList

    INT     shift, and go to state 45
    FLOAT   shift, and go to state 46
    ID      shift, and go to state 47
    RETURN  shift, and go to state 48
    IF      shift, and go to state 49
    WHILE   shift, and go to state 50
    MINUS   shift, and go to state 51
    NOT     shift, and go to state 52
    LP      shift, and go to state 53
    LC      shift, and go to state 23

    $default  reduce using rule 25 (StmtList)

    CompSt    go to state 54
    StmtList  go to state 70
    Stmt      go to state 56
    Exp       go to state 57


State 57

   26 Stmt: Exp • SEMI
   39 Exp: Exp • ASSIGNOP Exp
   40    | Exp • AND Exp
   41    | Exp • OR Exp
   42    | Exp • RELOP Exp
   43    | Exp • PLUS Exp
   44    | Exp • MINUS Exp
   45    | Exp • STAR Exp
   46    | Exp • DIV Exp
   52    | Exp • LB Exp RB
   53    | Exp • DOT ID

    SEMI      shift, and go to state 71
    ASSIGNOP  shift, and go to state 72
    OR        shift, and go to state 73
    AND       shift, and go to state 74
    RELOP     shift, and go to state 75
    PLUS      shift, and go to state 76
    MINUS     shift, and go to state 77
    STAR      shift, and go to state 78
    DIV       shift, and go to state 79
    LB        shift, and go to state 80
    DOT       shift, and go to state 81


State 58

   38 Dec: VarDec ASSIGNOP • Exp

    INT    shift, and go to state 45
    FLOAT  shift, and go to state 46
    ID     shift, and go to state 47
    MINUS  shift, and go to state 51
    NOT    shift, and go to state 52
    LP     shift, and go to state 53

    Exp  go to state 82


State 59

   34 Def: Specifier DecList SEMI •

    $default  reduce using rule 34 (Def)


State 60

   36 DecList: Dec COMMA • DecList

    ID  shift, and go to state 32

    VarDec   go to state 36
    DecList  go to state 83
    Dec      go to state 38


State 61

   20 VarList: ParamDec COMMA VarList •

    $default  reduce using rule 20 (VarList)


State 62

   50 Exp: ID LP • Args RP
   51    | ID LP • RP

    INT    shift, and go to state 45
    FLOAT  shift, and go to state 46
    ID     shift, and go to state 47
    MINUS  shift, and go to state 51
    NOT    shift, and go to state 52
    LP     shift, and go to state 53
    RP     shift, and go to state 84

    Exp   go to state 85
    Args  go to state 86


State 63

   28 Stmt: RETURN Exp • SEMI
   39 Exp: Exp • ASSIGNOP Exp
   40    | Exp • AND Exp
   41    | Exp • OR Exp
   42    | Exp • RELOP Exp
   43    | Exp • PLUS Exp
   44    | Exp • MINUS Exp
   45    | Exp • STAR Exp
   46    | Exp • DIV Exp
   52    | Exp • LB Exp RB
   53    | Exp • DOT ID

    SEMI      shift, and go to state 87
    ASSIGNOP  shift, and go to state 72
    OR        shift, and go to state 73
    AND       shift, and go to state 74
    RELOP     shift, and go to state 75
    PLUS      shift, and go to state 76
    MINUS     shift, and go to state 77
    STAR      shift, and go to state 78
    DIV       shift, and go to state 79
    LB        shift, and go to state 80
    DOT       shift, and go to state 81


State 64

   29 Stmt: IF LP • Exp RP Stmt
   30     | IF LP • Exp RP Stmt ELSE Stmt

    INT    shift, and go to state 45
    FLOAT  shift, and go to state 46
    ID     shift, and go to state 47
    MINUS  shift, and go to state 51
    NOT    shift, and go to state 52
    LP     shift, and go to state 53

    Exp  go to state 88


State 65

   31 Stmt: WHILE LP • Exp RP Stmt

    INT    shift, and go to state 45
    FLOAT  shift, and go to state 46
    ID     shift, and go to state 47
    MINUS  shift, and go to state 51
    NOT    shift, and go to state 52
    LP     shift, and go to state 53

    Exp  go to state 89


State 66

   39 Exp: Exp • ASSIGNOP Exp
   40    | Exp • AND Exp
   41    | Exp • OR Exp
   42    | Exp • RELOP Exp
   43    | Exp • PLUS Exp
   44    | Exp • MINUS Exp
   45    | Exp • STAR Exp
   46    | Exp • DIV Exp
   48    | MINUS Exp •
   52    | Exp • LB Exp RB
   53    | Exp • DOT ID

    STAR  shift, and go to state 78
    DIV   shift, and go to state 79
    LB    shift, and go to state 80
    DOT   shift, and go to state 81

    $default  reduce using rule 48 (Exp)


State 67

   39 Exp: Exp • ASSIGNOP Exp
   40    | Exp • AND Exp
   41    | Exp • OR Exp
   42    | Exp • RELOP Exp
   43    | Exp • PLUS Exp
   44    | Exp • MINUS Exp
   45    | Exp • STAR Exp
   46    | Exp • DIV Exp
   49    | NOT Exp •
   52    | Exp • LB Exp RB
   53    | Exp • DOT ID

    LB   shift, and go to state 80
    DOT  shift, and go to state 81

    $default  reduce using rule 49 (Exp)


State 68

   39 Exp: Exp • ASSIGNOP Exp
   40    | Exp • AND Exp
   41    | Exp • OR Exp
   42    | Exp • RELOP Exp
   43    | Exp • PLUS Exp
   44    | Exp • MINUS Exp
   45    | Exp • STAR Exp
   46    | Exp • DIV Exp
   47    | LP Exp • RP
   52    | Exp • LB Exp RB
   53    | Exp • DOT ID
